# d3lphin

./: .dolphinview  AUTHORS  ChangeLog  Doxyfile  Makefile.in  acinclude.m4  configure  configure.in  configure.in.in  d3lphin.kdevelop  d3lphin.kdevelop.pcs  d3lphin.kdevses  d3lphin.tag  dolphin.kdevelop  dolphin.kdevelop.pcs  dolphin.kdevses  dolphin.tag
admin/: acinclude.m4.in  cvs.sh
autom4te.cache/: output.0  requests  traces.0  traces.1
debug/po/: d3lphin.gmo  de.gmo  et.gmo  he.gmo  it.gmo  ru.gmo
doc/: Makefile.am  Makefile.in
doc/en/: Makefile.am  Makefile.in
po/: Makefile  Makefile.in  d3lphin.po  d3lphin.pot  de.gmo  de.po  dolphin.po  dolphin.pot  el.gmo  es.gmo  fr.gmo  pl.gmo  ru.gmo  ru.po
src/: Makefile.am  Makefile.in  bookmarkselector.cpp  bookmarkselector.h  bookmarkssettingspage.cpp  bookmarkssettingspage.h  bookmarkssidebarpage.cpp  bookmarkssidebarpage.h  d3lphin.desktop  detailsviewsettingspage.cpp  detailsviewsettingspage.h  dolphin.cpp  dolphin.h  dolphincontextmenu.cpp  dolphincontextmenu.h  dolphindetailsview.cpp  dolphindetailsview.h  dolphindetailsviewsettings.cpp  dolphindetailsviewsettings.h  dolphiniconsview.cpp  dolphiniconsview.h  dolphiniconsviewsettings.cpp  dolphiniconsviewsettings.h  dolphinsettings.cpp  dolphinsettings.h  dolphinsettingsbase.cpp  dolphinsettingsbase.h  dolphinsettingsdialog.cpp  dolphinsettingsdialog.h  dolphinstatusbar.cpp  dolphinstatusbar.h  dolphinui.rc  dolphinview.cpp  dolphinview.h  editbookmarkdialog.cpp  filterbar.cpp  filterbar.h  generalsettingspage.cpp  generalsettingspage.h  iconsviewsettingspage.cpp  (+36 more)
src/pics/: Makefile.am  Makefile.in
src/pics/128x128/: Makefile.am  Makefile.in
src/pics/16x16/: Makefile.am  Makefile.in
src/pics/22x22/: Makefile.am  Makefile.in
src/pics/32x32/: Makefile.am  Makefile.in
src/pics/48x48/: Makefile.am  Makefile.in
src/pics/64x64/: Makefile.am  Makefile.in
src/servicemenus/: Makefile.am  Makefile.in  ark_compress.desktop  d3lphin_su.desktop
templates/: cpp
